# sfml-snake

./: .gitignore  CMakeLists.txt  Draw.cpp  Food.cpp  Food.hpp  Game.cpp  Input.cpp  Logic.cpp  README.md  Snake.cpp  Snake.hpp  Test  Test.cpp  Update.cpp  main.cpp  snake  snake_sfml  tempCodeRunnerFile.cpp
Snake Game/: Draw.cpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  Input.cpp  Logic.cpp  Snake.cpp  Update.cpp  main.cpp
Snake Game.xcodeproj/: project.pbxproj
Snake Game.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Snake Game.xcodeproj/project.xcworkspace/xcuserdata/Ibrahim.xcuserdatad/: UserInterfaceState.xcuserstate
Snake Game.xcodeproj/xcuserdata/Ibrahim.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Snake Game.xcodeproj/xcuserdata/Ibrahim.xcuserdatad/xcschemes/: xcschememanagement.plist
